# Strontium

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  example4.vs  imgui.ini  oldRenderer.txt  test.fs  test.vs
editor/: CMakeLists.txt
editor/include/: EditorLayer.h
editor/include/GuiElements/: AssetBrowserWindow.h  CameraWindow.h  MaterialSubWindow.h  ModelWindow.h  RendererWindow.h  SceneGraphWindow.h  Styles.h  ViewportWindow.h  WindowManager.h
editor/include/Widgets/: ImageWidgets.h  LightWidgets.h
editor/src/: EditorLayer.cpp  Strontium90.cpp
editor/src/GuiElements/: AssetBrowserWindow.cpp  CameraWindow.cpp  FileBrowserWindow.cpp  MaterialSubWindow.cpp  ModelWindow.cpp  RendererWindow.cpp  SceneGraphWindow.cpp  ShaderWindow.cpp  ViewportWindow.cpp  WindowManager.cpp
editor/src/Widgets/: ImageWidgets.cpp  LightWidgets.cpp
engine/: CMakeLists.txt  imgui.ini
engine/assets/.internal/: cube.fbx
engine/assets/shaders/compute/: bilatBlur.srshader
engine/assets/shaders/deferred/: staticGeometryPass.srshader
engine/assets/shaders/post/: grid.srshader  (+3 more)
engine/include/: StrontiumPCH.h
engine/include/Assets/: AssetManager.h  AssetPool.h  Assets.h  Image2DAsset.h  MaterialAsset.h  ModelAsset.h
engine/include/Core/: Application.h  ApplicationBase.h  AssetManager.h  EntryPoint.h  Events.h  JobSystem.h  Logs.h  Math.h  ThreadPool.h  Window.h
engine/include/Graphics/: Animations.h  Buffers.h  EditorCamera.h  EnvironmentMap.h  FrameBuffer.h  GPUTimers.h  GeometryBuffer.h  GraphicsContext.h  LTCLUTs.h  Material.h  Meshes.h  Model.h  RenderBuffer.h  Renderer.h  RendererCommands.h  Shaders.h  ShadingPrimatives.h  StaticMeshCache.h  Textures.h  VertexArray.h
engine/include/GuiElements/: IconsFontAwesome4.h  MaterialSubWindow.h  ModelWindow.h
engine/include/Layers/: ImGuiLayer.h  Layers.h
engine/include/Physics/: PhysicsThreadPool.h  PhysicsWorld.h
engine/include/PhysicsEngine/: PhysicsActor.h  PhysicsEngine.h  PhysicsFlags.h  PhysicsUtils.h
engine/include/PhysicsSystem/: PhysicsWorld.h
engine/include/Scenes/: Components.h  Entity.h  Scene.h
engine/include/Serialization/: YamlSerialization.h
engine/include/Utils/: AssimpUtilities.h  AsyncAssetLoading.h  Utilities.h
engine/src/Assets/: AssetManager.cpp  Image2DAsset.cpp  MaterialAsset.cpp  ModelAsset.cpp
engine/src/Core/: Application.cpp  Logs.cpp  Math.cpp  ThreadPool.cpp  Window.cpp
engine/src/Graphics/: Animations.cpp  Buffers.cpp  EditorCamera.cpp  EnvironmentMap.cpp  FrameBuffer.cpp  GPUTimers.cpp  GeometryBuffer.cpp  GraphicsContext.cpp  Material.cpp  Meshes.cpp  Model.cpp  RenderBuffer.cpp  Renderer.cpp  RendererCommands.cpp  Shaders.cpp  StaticMeshCache.cpp  Textures.cpp  VertexArray.cpp
engine/src/GuiElements/: RendererWindow.cpp  SceneGraphWindow.cpp  ViewportWindow.cpp
engine/src/Layers/: EditorLayer.cpp  ImGuiLayer.cpp  Layers.cpp
engine/src/Physics/: PhysicsThreadPool.cpp  PhysicsWorld.cpp
engine/src/PhysicsEngine/: PhysicsActor.cpp  PhysicsEngine.cpp
engine/src/PhysicsSystem/: PhysicsWorld.cpp
engine/src/Scenes/: Entity.cpp  Scene.cpp
engine/src/Serialization/: YamlSerialization.cpp
engine/src/Utils/: AsyncAssetLoading.cpp  EnttImplementation.cpp  Utilities.cpp
(+434 files in other folders)
